--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
    <title>Mihir Portfolio</title>
    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+   <section class="top-section">
+      <div class="half">
+         <h1>Welcome To</h1>
+         <h1><span class="orange-color">Mihir</span> World!</h1>
+         <h3>Build Climber and Train Stopper</h3>
+         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.
+            That's
+            why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+         </p>
+         <a class="hire_me_btn" href="" target="_blank">HIRE ME</a>
+      </div>
+      <div class="half">
+         <img src="images/jhankar.png" alt="">
+      </div>
+   </section>
 </body>
 
 </html>
