added experience section and footer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,52 @@
          <img src="images/jhankar.png" alt="">
       </div>
    </section>
+
+   <section class="dream-big-section">
+      <div class="dream-half">
+         <img src="images/jhankar2.png" alt="">
+      </div>
+      <div class="dream-half">
+         <h2>Dream Big</h2>
+         <h3>Become a web debeloper</h3>
+         <p>
+            I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to
+            make simple website. My goal is to build 3 websites and learn advanced topics.
+         </p>
+         <a href="http://" target="_blank" rel="noopener noreferrer">DOWNLOAD RESUME</a>
+      </div>
+   </section>
+
+   <section class="experience-section">
+      <h2>Experiences</h2>
+      <div class="expr_items">
+         <div class="experience_half" id="full_stack">
+            <h3>Full Stack Web Developer</h3>
+            <h4>2021-Present | Pro Level Developer</h4>
+            <p>
+               I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+               efficient.
+               I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even
+               know
+               the deployment, server and security. I will give you 100% web solution.
+            </p>
+         </div>
+         <div class="experience_half" id="baby_stack">
+            <h3>Baby Web Developer</h3>
+            <h4>2020-2021 | Programming Hero Learne</h4>
+            <p>
+               They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+               it
+               to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+            </p>
+         </div>
+      </div>
+   </section>
+
+   <footer>
+      <span>&copy; Mihir 2022, a Programming Hero initiative.</span>
+   </footer>
+
 </body>
 
 </html>
