class name changed

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-   <section class="top-section">
-      <div class="half">
+   <section class="top-banar-section">
+      <div class="half_banner">
          <h1>Welcome To</h1>
          <h1><span class="orange-color">Mihir</span> World!</h1>
          <h3>Build Climber and Train Stopper</h3>
@@ -24,7 +24,7 @@
          </p>
          <a class="hire_me_btn" href="" target="_blank">HIRE ME</a>
       </div>
-      <div class="half">
+      <div class="half_banner">
          <img src="images/jhankar.png" alt="">
       </div>
    </section>
